更新运维数据
1 注意 首页不用这个地址：http://yingtao.co.uk 会触发浏览器信息统计
使用http://yingtao.co.uk/Home/Index或者http://yingtao.co.uk/Home/
2 添加了私信的图标

--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/Flash.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/Flash.cshtml
@@ -5,31 +5,31 @@
     <ul style="margin-left:0px;">
         <li>
             <div class="grid_11 alpha">
-                <a href="#">
+                <a href="http://yingtao.co.uk/Home/Index">
                     <img class="img1" src="@AppSettings.ImageDomain("home/left1.png")" /></a>
             </div>
             <div class="grid_7 omega">
-                <a href="#">
+                <a href="http://yingtao.co.uk/Transfer/Index/0#">
                     <img class="img2" src="@AppSettings.ImageDomain("home/right1.png")" /></a>
             </div>
         </li>
         <li>
             <div class="grid_11 alpha">
-                <a href="#">
+                <a href="http://yingtao.co.uk/GoodsTransfer/HomeSupplies">
                     <img class="img1" src="@AppSettings.ImageDomain("home/left2.png")" /></a>
             </div>
             <div class="grid_7 omega">
-                <a href="#">
+                <a href="http://yingtao.co.uk/HouseTransfer/Properties">
                     <img class="img2" src="@AppSettings.ImageDomain("home/right2.png")" /></a>
             </div>
         </li>
         <li>
             <div class="grid_11 alpha">
-                <a href="#">
+                <a href="http://yingtao.co.uk/CarTransfer/SecondHandCar">
                     <img class="img1" src="@AppSettings.ImageDomain("home/left3.png")" /></a>
             </div>
             <div class="grid_7 omega">
-                <a href="#">
+                <a href="http://weibo.com/yingtaouk">
                     <img class="img2" src="@AppSettings.ImageDomain("home/right3.png")" /></a>
             </div>
         </li>
