--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/HouseList/Partial/Flash.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/HouseList/Partial/Flash.cshtml
@@ -3,37 +3,38 @@
     <div class="box" id="slider">
         <div class="left_bss" id="left_btns"></div>
         <div class="right_bss" id="right_btns"></div>
-        <ul style="margin-left: 0px;">
-            <li>
-                <div class="grid_11 alpha">
-                    <a href="#">
-                        <img class="img1" src="@AppSettings.ImageDomain("home/left1.png")" /></a>
-                </div>
-                <div class="grid_7 omega">
-                    <a href="#">
-                        <img class="img2" src="@AppSettings.ImageDomain("home/right1.png")" /></a>
-                </div>
-            </li>
-            <li>
-                <div class="grid_11 alpha">
-                    <a href="#">
-                        <img class="img1" src="@AppSettings.ImageDomain("home/left2.png")" /></a>
-                </div>
-                <div class="grid_7 omega">
-                    <a href="#">
-                        <img class="img2" src="@AppSettings.ImageDomain("home/right2.png")" /></a>
-                </div>
-            </li>
-            <li>
-                <div class="grid_11 alpha">
-                    <a href="#">
-                        <img class="img1" src="@AppSettings.ImageDomain("home/left3.png")" /></a>
-                </div>
-                <div class="grid_7 omega">
-                    <a href="#">
-                        <img class="img2" src="@AppSettings.ImageDomain("home/right3.png")" /></a>
-                </div>
-            </li>
-        </ul>
+    <ul style="margin-left:0px;">
+        <li>
+            <div class="grid_11 alpha">
+                <a href="http://yingtao.co.uk/Home/Index">
+                    <img class="img1" src="@AppSettings.ImageDomain("home/left1.png")" /></a>
+            </div>
+            <div class="grid_7 omega">
+                <a href="http://yingtao.co.uk/Transfer/Index/0#">
+                    <img class="img2" src="@AppSettings.ImageDomain("home/right1.png")" /></a>
+            </div>
+        </li>
+        <li>
+            <div class="grid_11 alpha">
+                <a href="http://yingtao.co.uk/GoodsTransfer/HomeSupplies">
+                    <img class="img1" src="@AppSettings.ImageDomain("home/left2.png")" /></a>
+            </div>
+            <div class="grid_7 omega">
+                <a href="http://yingtao.co.uk/HouseTransfer/Properties">
+                    <img class="img2" src="@AppSettings.ImageDomain("home/right2.png")" /></a>
+            </div>
+        </li>
+        <li>
+            <div class="grid_11 alpha">
+                <a href="http://yingtao.co.uk/CarTransfer/SecondHandCar">
+                    <img class="img1" src="@AppSettings.ImageDomain("home/left3.png")" /></a>
+            </div>
+            <div class="grid_7 omega">
+                <a href="http://weibo.com/yingtaouk">
+                    <img class="img2" src="@AppSettings.ImageDomain("home/right3.png")" /></a>
+            </div>
+        </li>
+    </ul>
     </div>
 </div>
+
