添加首页私信提醒功能
1 添加了对用户私信数量的提醒和连接导航
1）如果用户没有私信 则不提示
2  针对用户发送私信功能 添加更新相应缓存机制

--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/CarList/Partial/Flash.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/CarList/Partial/Flash.cshtml
@@ -6,7 +6,7 @@
     <ul style="margin-left:0px;">
         <li>
             <div class="grid_11 alpha">
-                <a href="http://yingtao.co.uk">
+                <a href="http://yingtao.co.uk/Home/Index">
                     <img class="img1" src="@AppSettings.ImageDomain("home/left1.png")" /></a>
             </div>
             <div class="grid_7 omega">
