--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Index.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Fx.InformationPlatform.Site.ViewModel.HomeModel
+@using Fx.InformationPlatform.Site
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "英淘网-英国华人生活信息发布平台";
