--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/GoodsList/Partial/Flash.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/GoodsList/Partial/Flash.cshtml
@@ -6,7 +6,7 @@
     <ul style="margin-left:0px;">
         <li>
             <div class="grid_11 alpha">
-                <a href="http://yingtao.co.uk">
+                <a href="http://yingtao.co.uk/Home/Index">
                     <img class="img1" src="@AppSettings.ImageDomain("home/left1.png")" /></a>
             </div>
             <div class="grid_7 omega">
