--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/House.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/House.cshtml
@@ -139,7 +139,7 @@
                         <li>
                             <div class="pic">
                                 <div class="img_cons_wks_common">
-                                    <div class="tits_btm_coms_index">最新发布</div>
+                                    <div class="tits_btm_coms_index">置顶推广</div>
                                     <div class="interval_line_c"></div>
                                     <a href="@AppSettings.HouseTransferLink(item.HouseTransferInfoId)" target="_blank" class="imgs_a">
                                         <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
