--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/Car.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/Car.cshtml
@@ -145,7 +145,7 @@
                         <li>
                             <div class="pic">
                                 <div class="img_cons_wks_common">
-                                    <div class="tits_btm_coms_index">最新发布</div>
+                                    <div class="tits_btm_coms_index">置顶推广</div>
                                     <div class="interval_line_c"></div>
                                     <a href="@AppSettings.CarTransferLink(item.CarTransferInfoId)" class="imgs_a"  target="_blank" >
                                         <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
