对领域层添加了相关注释
1 对领域层添加了相关注释
2 移除一些无用代码
3 移除Site下一些无用的根
4 希望添加一些登录js加密后后台解密的功能  未实现

后续
1Job部分接口少了JobSuccess和其相关应用
2Site下GoodConditions这个并无多大作用的根 最好能从数据库移除

--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Account/Login.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
-﻿
-@model Fx.Entity.Account.RegisterUser
+﻿@model Fx.Entity.Account.RegisterUser
+@using Fx.InformationPlatform.Site;
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "登录 - 英淘网";
@@ -42,4 +42,14 @@
         </div>
 
     </div>
+    <script type="text/javascript"  src="@AppSettings.JavaScriptDomain("md5.js")"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $(":submit").click(function () {
+                $("#Password").val(hex_md5("input string"));
+            });
+        });
+    </script>
+    
+    
 }
