修复车辆求购详情页面缺少引用

--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/CarTransferDetail/Partial/Ad.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/CarTransferDetail/Partial/Ad.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="grid_24">
+﻿@using Fx.InformationPlatform.Site
+<div class="grid_24">
     <div class="grid_4 alpha">
         <div class="common_six_grids">
             <a href="#">
