--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Search/Partial/GoodsTransfer/Link.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Search/Partial/GoodsTransfer/Link.cshtml
@@ -10,7 +10,7 @@
         area = Model.AreaId,
         city = Model.CityId,
         clc = Model.Clc
-    }, new { @class = "pre-btn" })
+    }, new { @class = "pre-btn",rel="nofollow" })
 }
 else
 {
@@ -23,13 +23,13 @@ else
         area = Model.AreaId,
         city = Model.CityId,
         clc = Model.Clc
-    }, new { @class = "pre-btn" })
+    }, new { @class = "pre-btn",rel="nofollow" })
 }
 @for (int i = Model.StartIndex; i <= Model.EndIndex; i++)
 {
     if (i == Model.CurrentIndex)
     {
-    <a href="#" class="currents-pages">@Model.CurrentIndex</a>
+    <a href="#" class="currents-pages" rel="nofollow">@Model.CurrentIndex</a>
     }
     else
     {
@@ -42,7 +42,7 @@ else
         area = Model.AreaId,
         city = Model.CityId,
         clc = Model.Clc
-    })
+    }, new { rel="nofollow"})
     }
 }
 @Html.ActionLink("下一页", Model.Action, new
@@ -54,4 +54,4 @@ else
     area = Model.AreaId,
     city = Model.CityId,
     clc = Model.Clc
-}, new { @class = "next-btn" })
+}, new { @class = "next-btn",rel="nofollow" })
